# reporting-rs

./: .gitignore  Cargo.toml  DIAGRAMS.md
src/: lib.rs  settings.rs
src/api/: handlers.rs  mod.rs  repository.rs
src/domain/: mod.rs  models.rs  service.rs
src/executor/: generator.rs  mod.rs  planner.rs  query.rs  templates.rs
src/models/: mod.rs  models.rs  query.rs  service.rs
templates/: query.sql
test/: datasource.yaml  report_request.json  schema.yaml
tests/: query_tests.rs
tests/common/: mod.rs
